; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mcheck/extr_mce.c_wait_for_panic.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mcheck/extr_mce.c_wait_for_panic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PANIC_TIMEOUT = common dso_local global i64 0, align 8
@USEC_PER_SEC = common dso_local global i64 0, align 8
@panic_timeout = common dso_local global i64 0, align 8
@mce_panic_timeout = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [32 x i8] c"Panicing machine check CPU died\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wait_for_panic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_for_panic() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @PANIC_TIMEOUT, align 8
  %3 = load i64, i64* @USEC_PER_SEC, align 8
  %4 = mul nsw i64 %2, %3
  store i64 %4, i64* %1, align 8
  %5 = call i32 (...) @preempt_disable()
  %6 = call i32 (...) @local_irq_enable()
  br label %7

7:                                                ; preds = %11, %0
  %8 = load i64, i64* %1, align 8
  %9 = add nsw i64 %8, -1
  store i64 %9, i64* %1, align 8
  %10 = icmp sgt i64 %8, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = call i32 @udelay(i32 1)
  br label %7

13:                                               ; preds = %7
  %14 = load i64, i64* @panic_timeout, align 8
  %15 = icmp eq i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = load i64, i64* @mce_panic_timeout, align 8
  store i64 %17, i64* @panic_timeout, align 8
  br label %18

18:                                               ; preds = %16, %13
  %19 = call i32 @panic(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @preempt_disable(...) #1

declare dso_local i32 @local_irq_enable(...) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
